force-app/main/default/objects/cdcpc__RD_Routing_Details__c/cdcpc__RD_Routing_Details__c.object-meta.xml
<CustomObject>
    <label>RD Routing Details</label>
    <nameField>
        <label>RD Routing Details</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Routing Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>