force-app/main/default/objects/cdcpc__RD_Routing_Details__c/fields/cdcpc__NumVal4__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__NumVal4__c</fullName>
    <label>NumVal4</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>