force-app/main/default/objects/cdcpc__RD_Routing_Details__c/fields/cdcpc__Operation__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Operation__c</fullName>
    <formula>cdcpc__Operation_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operation</label>
    <type>Text</type>
</CustomField>