force-app/main/default/objects/cdcpc__RD_Routing_Details__c/fields/cdcpc__Outside_Operation_Item__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Outside_Operation_Item__c</fullName>
    <label>Outside Operation Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>